# slicer

./: README.en.md  README.md  index.html  package-lock.json  package.json
docs/: index.md  (+9 more)
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/fixtures/sample_analysis/: image_hash_mismatch.json  invalid_json.json  missing_schema_version.json  page_id_mismatch.json  unknown_schema_version.json  valid_page_analysis_v1.json  wrong_field_type.json
src-tauri/migrations/: 0001_initial.sql  0002_jobs_and_events.sql  0003_documents_pages_images.sql  0004_analysis_results.sql  0005_index_versions.sql
src-tauri/src/: errors.rs  lib.rs  main.rs
src-tauri/src/api/: auth.rs  dto.rs  endpoints.rs  health.rs  mod.rs  server.rs  state.rs
src-tauri/src/artifacts/: index_store.rs  jsonl_exporter.rs  media_exporter.rs  mod.rs  page_json_exporter.rs  workspace_layout.rs
src-tauri/src/commands/: analysis_commands.rs  api_commands.rs  diagnostics_commands.rs  export_commands.rs  import_commands.rs  job_commands.rs  mod.rs  search_commands.rs  settings_commands.rs  workspace_commands.rs
src-tauri/src/diagnostics/: mod.rs
src-tauri/src/domain/: analysis.rs  document.rs  index.rs  job.rs  mod.rs  page.rs  settings.rs  workspace.rs
src-tauri/src/jobs/: job_orchestrator.rs  mod.rs
src-tauri/src/providers/: converter.rs  libreoffice_converter.rs  mod.rs  pdf_renderer.rs
src-tauri/src/providers/model/: anthropic_provider.rs  custom_http_provider.rs  mimo_provider.rs  mock_provider.rs  mod.rs  openai_provider.rs  prompt_template.rs  provider.rs  schema_validator.rs  (+1 more)
src-tauri/src/repositories/: analysis_repository.rs  db.rs  document_repository.rs  index_repository.rs  ledger_repository.rs  mod.rs  settings_repository.rs  workspace_settings_repository.rs
src-tauri/src/security/: mod.rs
src-tauri/src/services/: analysis_service.rs  api_server_service.rs  import_service.rs  mod.rs  search_service.rs  settings_service.rs  workspace_service.rs
src-tauri/tests/: api_server_lifecycle_tests.rs
(+103 files in other folders)
